feat: account pages done and some ui improvements at home page.

--- a/auth/favorites.html
+++ b/auth/favorites.html
@@ -47,12 +47,14 @@
         <div class="nav-left inline-flex">
           <a
             href="/flight/flightsearch.html"
+            target="_blank"
             class="inline-flex nav-link flights-btn nav-booking-tab"
           >
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
             href="/stay/searchstays.html"
+            target="_blank"
             class="inline-flex nav-link stays-btn nav-booking-tab"
           >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
@@ -60,7 +62,7 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html"
+          <a href="/landing/index.html" target="_blank"
             ><img src="/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
@@ -75,8 +77,8 @@
             <img src="/assets/profile-icon.svg" alt="" />&nbsp;&nbsp;Jesnie M.
           </button>
           <div class="mobile-toggle" id="hamburger">
-            <i class="fa-solid fa-bars menu-icon"></i>
-            <i class="fa-solid fa-xmark close-icon"></i>
+            <img src="/assets/open-icon.svg" alt="" class="menu-icon" />
+            <img src="/assets/close-icon-nav.svg" alt="" class="close-icon" />
           </div>
         </div>
         <!-- This is the dropdown menu -->
@@ -95,14 +97,14 @@
             </div>
           </div>
           <div class="profile-layer">
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/user-sm-icon.svg" alt="" />&nbsp;&nbsp;My
               Accounts</a
             >
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/card-icon.svg" alt="" />&nbsp;&nbsp;Payments</a
             >
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img
                 src="/assets/settings-icon.svg"
                 alt=""
@@ -548,7 +550,6 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script type="module" src="/src/landing-page/main.js"></script>
     <script type="module" src="/src/auth/favorites.js"></script>
     <script type="module" src="/src/flight-page/flightdetails.js"></script>
     <script type="module" src="/src/flight-page/flightlisting.js"></script>
