--- a/flight/flightsearch.html
+++ b/flight/flightsearch.html
@@ -39,38 +39,50 @@
   <body>
     <!-- Header & Navigation -->
     <header>
-      <nav class="container">
+      <nav>
         <div class="nav-left inline-flex">
           <a
             href="#"
-            class="inline-flex nav-link flights-btn nav-booking-tab active"
+            class="inline-flex nav-link flights-btn-nav flights-btn nav-booking-tab active"
           >
-            <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
+            <img src="/assets/airplane-white-icon.svg" alt="airplane" /><span
+              >Find Flights</span
+            >
           </a>
           <a
             href="../hotel/hotelsearch.html"
-            class="inline-flex nav-link stays-btn nav-booking-tab"
+            class="inline-flex nav-link stays-btn-nav stays-btn nav-booking-tab"
           >
-            <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
+            <img src="/assets/bed-white-icon.svg" alt="bed" /><span
+              >Find Stays</span
+            >
           </a>
         </div>
 
-        <div class="company-logo">
+        <div class="company-logo company-logo-nav">
           <a href="/landing/index.html" target="_blank"
-            ><img src="/assets/company-logo.svg" alt="Logo"
+            ><img src="/assets/company-logo-white.svg" alt="Logo"
           /></a>
         </div>
 
         <div class="nav-right inline-flex">
-          <button class="btn-white fs-16 fw-semi-bold">
-            <a href="../auth/login.html">Login</a>
-          </button>
-          <button class="btn-secondary fs-16 fw-semi-bold">
-            <a href="../auth/signup.html">Sign up</a>
-          </button>
+          <a href="../auth/login.html" class="nav-link nav-booking-tab"
+            ><span>Login</span></a
+          >
+          <a href="../auth/signup.html" class="nav-link nav-booking-tab"
+            ><span>Sign up</span></a
+          >
           <div class="mobile-toggle" id="hamburger">
-            <i class="fa-solid fa-bars menu-icon"></i>
-            <i class="fa-solid fa-xmark close-icon"></i>
+            <img
+              src="/assets/open-icon-white.svg"
+              alt=""
+              class="menu-nav menu-icon"
+            />
+            <img
+              src="/assets/close-icon-white.svg"
+              alt=""
+              class="close-nav close-icon"
+            />
           </div>
         </div>
       </nav>
@@ -141,34 +153,57 @@
         </div>
 
         <!-- Flights Form -->
-        <div id="flightForm" class="booking-form grid-4">
-          <div class="form-group">
-            <label>From - To</label>
-            <input
-              type="text"
-              id="fromToInput"
-              value="Lahore - Karachi"
-              placeholder="Lahore - Karachi"
-            />
-            <span class="fs-16 swap-icon">⇄</span>
-          </div>
+        <div id="flightForm" class="booking-form booking-flight-form">
+          <div class="grid">
+            <div class="form-group">
+              <label>From - To</label>
+              <input
+                type="text"
+                id="fromToInput"
+                value="Lahore - Karachi"
+                placeholder="Lahore - Karachi"
+              />
+              <span class="fs-16 swap-icon">⇄</span>
+            </div>
 
-          <div class="form-group trip">
-            <label>Trip</label>
-            <select>
-              <option>Return</option>
-              <option>One Way</option>
-            </select>
-          </div>
+            <div class="form-group trip">
+              <label>Trip</label>
+              <select>
+                <option>Return</option>
+                <option>One Way</option>
+              </select>
+            </div>
 
-          <div class="form-group">
-            <label>Depart - Return</label>
-            <input type="text" placeholder="07 Nov 22 - 13 Nov 22" />
-          </div>
+            <div class="return-depart">
+              <div class="form-group">
+                <label>Depart</label>
+                <div class="input-with-icon input-calendar">
+                  <input type="date" />
+                  <img
+                    src="/assets/calendar-icon.svg"
+                    alt="Calendar"
+                    class="input-icon-right input-calendar-icon"
+                  />
+                </div>
+              </div>
 
-          <div class="form-group">
-            <label>Passenger - Class</label>
-            <input type="text" placeholder="1 Passenger, Economy" />
+              <div class="form-group">
+                <label>Return</label>
+                <div class="input-with-icon input-calendar">
+                  <input type="date" />
+                  <img
+                    src="/assets/calendar-icon.svg"
+                    alt="Calendar"
+                    class="input-icon-right input-calendar-icon"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label>Passenger - Class</label>
+              <input type="text" placeholder="1 Passenger, Economy" />
+            </div>
           </div>
         </div>
 
