--- a/stay/searchstays.html
+++ b/stay/searchstays.html
@@ -32,45 +32,57 @@
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="/src/landing-page/styles.css" />
-    <link rel="stylesheet" href="/src/stay-page/searchstays.css" />
+    <link rel="stylesheet" href="/src/stay-page/searchstay.css" />
     <link rel="stylesheet" href="/src/global-utilities/utilities.css" />
     <link rel="stylesheet" href="/src/global-utilities/responsive.css" />
   </head>
   <body>
     <!-- Header & Navigation -->
     <header>
-      <nav class="container">
+      <nav>
         <div class="nav-left inline-flex">
           <a
             href="../flight/flightsearch.html"
-            class="inline-flex nav-link flights-btn nav-booking-tab"
+            class="inline-flex nav-link flights-btn-nav flights-btn nav-booking-tab"
           >
-            <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
+            <img src="/assets/airplane-white-icon.svg" alt="airplane" /><span
+              >Find Flights</span
+            >
           </a>
           <a
             href="#"
-            class="inline-flex nav-link stays-btn nav-booking-tab active"
+            class="inline-flex nav-link stays-btn-nav stays-btn nav-booking-tab active"
           >
-            <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
+            <img src="/assets/bed-white-icon.svg" alt="bed" /><span
+              >Find Stays</span
+            >
           </a>
         </div>
 
-        <div class="company-logo">
+        <div class="company-logo company-logo-nav">
           <a href="/landing/index.html" target="_blank"
-            ><img src="/assets/company-logo.svg" alt="Logo"
+            ><img src="/assets/company-logo-white.svg" alt="Logo"
           /></a>
         </div>
 
         <div class="nav-right inline-flex">
-          <button class="btn-white fs-16 fw-semi-bold">
-            <a href="../auth/login.html">Login</a>
-          </button>
-          <button class="btn-secondary fs-16 fw-semi-bold">
-            <a href="../auth/signup.html">Sign up</a>
-          </button>
+          <a href="../auth/login.html" class="nav-link nav-booking-tab"
+            ><span>Login</span></a
+          >
+          <a href="../auth/signup.html" class="nav-link nav-booking-tab"
+            ><span>Sign up</span></a
+          >
           <div class="mobile-toggle" id="hamburger">
-            <i class="fa-solid fa-bars menu-icon"></i>
-            <i class="fa-solid fa-xmark close-icon"></i>
+            <img
+              src="/assets/open-icon-white.svg"
+              alt=""
+              class="menu-nav menu-icon"
+            />
+            <img
+              src="/assets/close-icon-white.svg"
+              alt=""
+              class="close-nav close-icon"
+            />
           </div>
         </div>
       </nav>
@@ -141,47 +153,53 @@
         </div>
 
         <!-- Stays Form -->
-        <div id="stayForm" class="booking-form grid-4">
-          <div class="form-group">
-            <label>Enter Destination</label>
-            <div class="input-with-icon">
-              <img src="/assets/bed-icon.svg" alt="Bed" class="input-icon" />
-              <input type="text" value="Istanbul, Turkey" />
+        <div id="stayForm" class="booking-form booking-stay-form">
+          <div class="grid">
+            <div class="form-group">
+              <label>Enter Destination</label>
+              <div class="input-with-icon">
+                <img src="/assets/bed-icon.svg" alt="Bed" class="input-icon" />
+                <input type="text" placeholder="Istanbul, Turkey" />
+              </div>
             </div>
-          </div>
 
-          <div class="form-group">
-            <label>Check In</label>
-            <div class="input-with-icon input-calendar">
-              <input type="date" />
-              <img
-                src="/assets/calendar-icon.svg"
-                alt="Calendar"
-                class="input-icon-right"
-              />
+            <div class="form-group">
+              <label>Check In</label>
+              <div class="input-with-icon input-calendar">
+                <input type="date" />
+                <img
+                  src="/assets/calendar-icon.svg"
+                  alt="Calendar"
+                  class="input-icon-right input-calendar-icon"
+                />
+              </div>
             </div>
-          </div>
 
-          <div class="form-group">
-            <label>Check Out</label>
-            <div class="input-with-icon input-calendar">
-              <input type="date" />
-              <img
-                src="/assets/calendar-icon.svg"
-                alt="Calendar"
-                class="input-icon-right"
-              />
+            <div class="form-group">
+              <label>Check Out</label>
+              <div class="input-with-icon input-calendar">
+                <input type="date" />
+                <img
+                  src="/assets/calendar-icon.svg"
+                  alt="Calendar"
+                  class="input-icon-right input-calendar-icon"
+                />
+              </div>
             </div>
-          </div>
 
-          <div class="form-group">
-            <label>Rooms & Guests</label>
-            <div class="input-with-icon">
-              <img src="/assets/user-icon.svg" alt="User" class="input-icon" />
-              <select>
-                <option>1 room, 2 guests</option>
-                <option>2 rooms, 4 guests</option>
-              </select>
+            <div class="form-group">
+              <label>Rooms & Guests</label>
+              <div class="input-with-icon">
+                <img
+                  src="/assets/user-icon.svg"
+                  alt="User"
+                  class="input-icon"
+                />
+                <select>
+                  <option>1 room, 2 guests</option>
+                  <option>2 rooms, 4 guests</option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
@@ -251,7 +269,7 @@
           </p>
         </div>
         <button class="btn-stroke">
-          <a href="listinghotel.html" target="_blank">See All</a>
+          <a href="stayslisting.html" target="_blank">See All</a>
         </button>
       </div>
       <div class="booking-banner box-area">
@@ -340,7 +358,7 @@
           </p>
         </div>
         <button class="btn-stroke">
-          <a href="listinghotel.html" target="_blank">See All</a>
+          <a href="stayslisting.html" target="_blank">See All</a>
         </button>
       </div>
       <div class="travel-location-wrapper">
