--- a/stay/staysdetails.html
+++ b/stay/staysdetails.html
@@ -70,8 +70,8 @@
             <img src="/assets/profile-icon.svg" alt="" />&nbsp;&nbsp;Jesnie M.
           </button>
           <div class="mobile-toggle" id="hamburger">
-            <i class="fa-solid fa-bars menu-icon"></i>
-            <i class="fa-solid fa-xmark close-icon"></i>
+            <img src="/assets/open-icon.svg" alt="" class="menu-icon" />
+            <img src="/assets/close-icon-nav.svg" alt="" class="close-icon" />
           </div>
         </div>
         <!-- This is the dropdown menu -->
@@ -86,18 +86,18 @@
             <div class="grid user-nav-info">
               <!-- Added class for styling info -->
               <h1 class="fs-16 fw-semi-bold">Jesnie Magaling</h1>
-              <h2 class="fs-14 fw-regular text-neutral-grey">Online</h2>
+              <h2 class="fs-14 fw-medium text-primary-color">Online</h2>
             </div>
           </div>
           <div class="profile-layer">
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/user-sm-icon.svg" alt="" />&nbsp;&nbsp;My
               Accounts</a
             >
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/card-icon.svg" alt="" />&nbsp;&nbsp;Payments</a
             >
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img
                 src="/assets/settings-icon.svg"
                 alt=""
@@ -122,14 +122,14 @@
           <img src="/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
-        <a href="#" class="mobile-link">
+        <a href="/stay/searchstays.html" class="mobile-link">
           <img src="/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
         </a>
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
+        <a href="/auth/favorites.html" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
         >
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
+        <a href="/auth/account.html" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/assets/user-icon.svg" alt="" />&nbsp;&nbsp;Account</a
         >
       </div>
@@ -1021,7 +1021,6 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script type="module" src="/src/landing-page/main.js"></script>
     <script type="module" src="/src/stay-page/searchstays.js"></script>
     <script type="module" src="/src/stay-page/stayslisting.js"></script>
     <script type="module" src="/src/stay-page/staysdetails.js"></script>
