--- a/stay/stayslisting.html
+++ b/stay/stayslisting.html
@@ -41,15 +41,12 @@
     <header>
       <nav class="container">
         <div class="nav-left inline-flex">
-          <a
-            href="#"
-            class="inline-flex nav-link flights-btn nav-booking-tab active"
-          >
+          <a href="#" class="inline-flex nav-link flights-btn nav-booking-tab">
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="../hotel/hotelsearch.html"
-            class="inline-flex nav-link stays-btn nav-booking-tab"
+            href="../stay/searchstays.html"
+            class="inline-flex nav-link stays-btn nav-booking-tab active"
           >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
           </a>
@@ -69,9 +66,26 @@
             <img src="/assets/profile-icon.svg" alt="" />&nbsp;&nbsp;Jesnie M.
           </button>
           <div class="mobile-toggle" id="hamburger">
-            <i class="fa-solid fa-bars menu-icon"></i>
-            <i class="fa-solid fa-xmark close-icon"></i>
+            <img src="/assets/open-icon.svg" alt="" class="menu-icon" />
+            <img src="/assets/close-icon-nav.svg" alt="" class="close-icon" />
           </div>
+        </div>
+        <!-- Mobile Navigation -->
+        <div class="mobile-nav" id="mobileNav">
+          <a href="./flightsearch.html" class="mobile-link" target="_blank">
+            <img src="/assets/airplane-icon.svg" alt="airplane" />
+            <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
+          </a>
+          <a href="/stay/searchstays.html" class="mobile-link" target="_blank">
+            <img src="/assets/bed-icon.svg" alt="bed" />
+            <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
+          </a>
+          <a href="/auth/favorites.html" class="mobile-link fs-16 fw-semi-bold"
+            ><img src="/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
+          >
+          <a href="/auth/account.html" class="mobile-link fs-16 fw-semi-bold"
+            ><img src="/assets/user-icon.svg" alt="" />&nbsp;&nbsp;Account</a
+          >
         </div>
         <!-- This is the dropdown menu -->
         <div class="user-nav" id="userNav">
@@ -85,18 +99,18 @@
             <div class="grid user-nav-info">
               <!-- Added class for styling info -->
               <h1 class="fs-16 fw-semi-bold">Jesnie Magaling</h1>
-              <h2 class="fs-14 fw-regular text-neutral-grey">Online</h2>
+              <h2 class="fs-14 fw-medium text-primary-color">Online</h2>
             </div>
           </div>
           <div class="profile-layer">
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/user-sm-icon.svg" alt="" />&nbsp;&nbsp;My
               Accounts</a
             >
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/card-icon.svg" alt="" />&nbsp;&nbsp;Payments</a
             >
-            <a href="#" class="user-link fs-14 fw-medium"
+            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
               ><img
                 src="/assets/settings-icon.svg"
                 alt=""
@@ -114,77 +128,77 @@
           </div>
         </div>
       </nav>
-
-      <!-- Mobile Navigation -->
-      <div class="mobile-nav" id="mobileNav">
-        <a href="./flightsearch.html" class="mobile-link" target="_blank">
-          <img src="/assets/airplane-icon.svg" alt="airplane" />
-          <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
-        </a>
-        <a href="#" class="mobile-link">
-          <img src="/assets/bed-icon.svg" alt="bed" />
-          <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
-        </a>
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
-          ><img src="/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
-        >
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
-          ><img src="/assets/user-icon.svg" alt="" />&nbsp;&nbsp;Account</a
-        >
-      </div>
     </header>
 
     <!-- Booking Form -->
     <section id="booking-details">
-      <div class="hotel-booking-container">
+      <div class="stays-booking-container">
+        <!-- Tabs -->
+        <div class="booking-tabs">
+          <h1>Where are you flying?</h1>
+        </div>
+
         <!-- Stays Form -->
-        <div id="stayForm" class="hotel-booking-form grid-4">
-          <div class="hotel-form-group">
-            <label>Enter Destination</label>
-            <div class="input-with-icon">
-              <img src="/assets/bed-icon.svg" alt="Bed" class="input-icon" />
-              <input type="text" value="Istanbul, Turkey" />
+        <div id="stayForm" class="booking-form booking-stay-form">
+          <div class="grid">
+            <div class="form-group">
+              <label>Enter Destination</label>
+              <div class="input-with-icon">
+                <img src="/assets/bed-icon.svg" alt="Bed" class="input-icon" />
+                <input type="text" placeholder="Istanbul, Turkey" />
+              </div>
             </div>
-          </div>
 
-          <div class="hotel-form-group">
-            <label>Check In</label>
-            <div class="input-with-icon input-calendar">
-              <input type="date" />
-              <img
-                src="/assets/calendar-icon.svg"
-                alt="Calendar"
-                class="input-icon-right"
-              />
+            <div class="form-group">
+              <label>Check In</label>
+              <div class="input-with-icon input-calendar">
+                <input type="date" />
+                <img
+                  src="/assets/calendar-icon.svg"
+                  alt="Calendar"
+                  class="input-icon-right input-calendar-icon"
+                />
+              </div>
             </div>
-          </div>
 
-          <div class="hotel-form-group">
-            <label>Check Out</label>
-            <div class="input-with-icon input-calendar">
-              <input type="date" />
-              <img
-                src="/assets/calendar-icon.svg"
-                alt="Calendar"
-                class="input-icon-right"
-              />
+            <div class="form-group">
+              <label>Check Out</label>
+              <div class="input-with-icon input-calendar">
+                <input type="date" />
+                <img
+                  src="/assets/calendar-icon.svg"
+                  alt="Calendar"
+                  class="input-icon-right input-calendar-icon"
+                />
+              </div>
             </div>
-          </div>
 
-          <div class="hotel-form-group">
-            <label>Rooms & Guests</label>
-            <div class="input-with-icon">
-              <img src="/assets/user-icon.svg" alt="User" class="input-icon" />
-              <select>
-                <option>1 room, 2 guests</option>
-                <option>2 rooms, 4 guests</option>
-              </select>
+            <div class="form-group">
+              <label>Rooms & Guests</label>
+              <div class="input-with-icon">
+                <img
+                  src="/assets/user-icon.svg"
+                  alt="User"
+                  class="input-icon"
+                />
+                <select>
+                  <option>1 room, 2 guests</option>
+                  <option>2 rooms, 4 guests</option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
-        <button class="hotel-listing-btn btn-primary btn-desktop">
-          <img src="/assets/search-icon.svg" alt="" />
-        </button>
+
+        <!-- Stays Actions -->
+        <div class="actions stays-actions">
+          <button class="inline-flex btn-black stays-btn">
+            <img src="/assets/plus-icon.svg" alt="" />&nbsp;Add Promo Code
+          </button>
+          <button class="inline-flex btn-primary stays-btn">
+            <img src="/assets/building-icon.svg" alt="" />&nbsp;Show Stays
+          </button>
+        </div>
       </div>
     </section>
 
