--- a/stay/staysbookingdetails.html
+++ b/stay/staysbookingdetails.html
@@ -226,8 +226,10 @@
               <img src="/assets/listing-bg-main-2.jpg" alt="" />
             </div>
             <div class="booking-total-heading">
-              <h2 class="fs-14 fw-medium text-neutral-grey">
-                CVK Park Bosphorus...
+              <h2
+                class="fs-14 fw-medium text-neutral-grey limit-text-to-1-line"
+              >
+                CVK Park Bosphorus Hotel Istanbul
               </h2>
               <h2 class="fs-18 fw-semi-bold">
                 Superior room - 1 double bed or 2 twin beds
