--- a/stay/searchstays.html
+++ b/stay/searchstays.html
@@ -113,8 +113,8 @@
           <div class="overlay swiper-slide">
             <img src="/assets/hero-section-bg.svg" alt="" />
             <div class="img-overlay text-center">
-              <p class="fs-45 fw-bold">Helping Others</p>
-              <h1 class="fs-94 ff-primary fw-bold">LIVE & TRAVEL</h1>
+              <p class="fs-45 fw-semi-bold">Have Smooth Travels</p>
+              <h1 class="fs-94 ff-primary fw-bold">NOMAD LIFE</h1>
               <h2 class="fs-20 fw-semi-bold">
                 Special offers to suit your plan
               </h2>
@@ -123,21 +123,17 @@
           <div class="overlay swiper-slide">
             <img src="/assets/hero-section-bg-2.svg" alt="" />
             <div class="img-overlay text-center">
-              <p class="fs-45 fw-bold">Wander with Purpose</p>
+              <p class="fs-45 fw-semi-bold">Wander with Purpose</p>
               <h1 class="fs-94 ff-primary fw-bold">GO BEYOND</h1>
-              <h2 class="fs-20 fw-semi-bold">
-                Unforgettable journeys tailored for you
-              </h2>
+              <h2 class="fs-20 fw-semi-bold">Travel made simple</h2>
             </div>
           </div>
           <div class="overlay swiper-slide">
             <img src="/assets/hero-section-bg-3.svg" alt="" />
             <div class="img-overlay text-center">
-              <p class="fs-45 fw-bold">Travel Made Simple</p>
+              <p class="fs-45 fw-semi-bold">Travel Made Simple</p>
               <h1 class="fs-94 ff-primary fw-bold">COZY TRAILS</h1>
-              <h2 class="fs-20 fw-semi-bold">
-                Enjoy seamless bookings and exclusive deals
-              </h2>
+              <h2 class="fs-20 fw-semi-bold">Where to go next? Let’s go!</h2>
             </div>
           </div>
         </div>
